--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "moment-jalaali": "^0.10.4",
     "next": "15.1.4",
     "next-themes": "^0.4.6",
+    "parse": "^6.1.1",
     "react": "^18.3.1",
     "react-creditcard": "^1.1.2",
     "react-day-picker": "^9.5.1",
